--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">petshop</string>
     <string name="chao">Welcome Petshop!</string>
+    <string name="you_are_signed_in">You are signed in !</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
