Fix UI, User profile, Check login, Load avatar (with rounded corners),  Edit profile (WIP)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,32 @@
     <string name="app_name">petshop</string>
     <string name="welcome">Welcome Petshop!</string>
     <string name="you_are_signed_in">You are signed in !</string>
-    <string name="sign_out">Sign Out</string>
+    <string name="sign_out">Đăng xuất</string>
+    <string name="update">Cập nhật</string>
+    <string name="personal_info">THÔNG TIN CÁ NHÂN</string>
+    <string name="name">Họ tên</string>
+    <string name="input_name">Nhập họ tên</string>
+    <string name="phone">Điện thoại</string>
+    <string name="input_phone">Nhập điện thoại</string>
+    <string name="email">Email</string>
+    <string name="input_email">Nhập email</string>
+    <string name="dob">Ngày sinh</string>
+    <string name="input_dob">Nhập ngày sinh</string>
+    <string name="gender">Giới tính</string>
+    <string name="male">Nam</string>
+    <string name="female">Nữ</string>
+    <string name="other">Khác</string>
+    <string name="address">Địa chỉ</string>
+    <string name="input_address">Nhập địa chỉ</string>
+    <string name="edit">Chỉnh sửa</string>
+    <string name="sign_in_ask">Please sign into your account</string>
+    <string name="welcome_back">Welcome back</string>
+    <string name="password_not_match">Passwords are not matching !</string>
+    <string name="create_acc_success">created account successfully !</string>
+    <string name="failed_to_auth">failed to Authenticate !</string>
+    <string name="email_sent">email sent to %s</string>
+    <string name="required">%s is required</string>
+    <string name="sign_in_success">signed in successfully</string>
+    <string name="sign_in_failed">sign in failed</string>
+    <string name="hi">Hi %s</string>
 </resources>
