fix hardcoded, edit new banner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">petshop</string>
-    <string name="welcome">Welcome Petshop!</string>
+    <string name="welcome">Welcome to Petshop!</string>
     <string name="you_are_signed_in">You are signed in !</string>
+    <string name="sign_in">Đăng nhập</string>
+    <string name="create_account">Tạo tài khoản</string>
     <string name="sign_out">Đăng xuất</string>
     <string name="update">Cập nhật</string>
     <string name="personal_info">THÔNG TIN CÁ NHÂN</string>
@@ -20,18 +22,40 @@
     <string name="address">Địa chỉ</string>
     <string name="input_address">Nhập địa chỉ</string>
     <string name="edit">Chỉnh sửa</string>
-    <string name="sign_in_ask">Please sign into your account</string>
-    <string name="welcome_back">Welcome back</string>
-    <string name="password_not_match">Passwords are not matching !</string>
-    <string name="create_acc_success">created account successfully !</string>
-    <string name="failed_to_auth">failed to Authenticate !</string>
-    <string name="email_sent">email sent to %s</string>
-    <string name="required">%s is required</string>
-    <string name="sign_in_success">signed in successfully</string>
-    <string name="sign_in_failed">sign in failed</string>
-    <string name="hi">Hi %s</string>
+    <string name="sign_in_ask">Vui lòng đăng nhập tài khoản của bạn</string>
+    <string name="welcome_back">Chào mừng trở lại !</string>
+    <string name="password_not_match">Mật khâu không khớp !</string>
+    <string name="create_acc_success">Tạo tài khoản thành công !</string>
+    <string name="failed_to_auth">Không thể xác thực !</string>
+    <string name="email_sent">Email đã được hồi đáp %s</string>
+    <string name="required">%s bắt buộc</string>
+    <string name="sign_in_success">Đăng nhập thành công !</string>
+    <string name="sign_in_failed">Đăng nhập không thành công !</string>
+    <string name="hi">Xin chào %s</string>
     <string name="quitting_edit_profile">Thoát chỉnh sửa hồ sơ</string>
     <string name="quitting_edit_profile_confirm">Bạn muốn thoát chỉnh sửa hồ sơ?</string>
     <string name="yes">Đồng ý</string>
     <string name="no">Huỷ bỏ</string>
+    <string name="password">Mật khẩu</string>
+    <string name="forgot_your_password">Quên mật khẩu?</string>
+    <string name="number_phone">Số điện thoại</string>
+    <string name="password_retype">Nhập lại mật khẩu</string>
+    <string name="already_account">Đã có tài khoản? Đăng nhâp</string>
+    <string name="find">Tìm kiếm</string>
+    <string name="categories">Phân loại</string>
+    <string name="popular">Phổ biến</string>
+    <string name="home">Trang chủ</string>
+    <string name="Profile">Cá nhân</string>
+    <string name="get_started">BẮT ĐẦU</string>
+    <string name="total">Tổng</string>
+    <string name="money_symbol">$</string>
+    <string name="care_tool">DỤNG CỤ CHĂM SÓC</string>
+    <string name="dry_seed">THỨC ĂN HẠT KHÔ</string>
+    <string name="pet_treats">BÁNH THƯỞNG</string>
+    <string name="soft_seed">THỨC ĂN HẠT MỀM</string>
+    <string name="toilet_sand">CÁT VỆ SINH</string>
+    <string name="description">Thông tin</string>
+    <string name="add_cart">Thêm vào giỏ hàng</string>
+    <string name="banner_text_1">Tìm hiểu thú cưng của bạn!</string>
+    <string name="banner_text_2">Xem ngay</string>
 </resources>
