update profile (bug: when user have no profile -> edit opens twice)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="required">%s bắt buộc</string>
     <string name="sign_in_success">Đăng nhập thành công !</string>
     <string name="sign_in_failed">Đăng nhập không thành công !</string>
-    <string name="hi">Xin chào %s</string>
+    <string name="hi">Xin chào, \n%s</string>
     <string name="quitting_edit_profile">Thoát chỉnh sửa hồ sơ</string>
     <string name="quitting_edit_profile_confirm">Bạn muốn thoát chỉnh sửa hồ sơ?</string>
     <string name="yes">Đồng ý</string>
@@ -58,4 +58,8 @@
     <string name="add_cart">Thêm vào giỏ hàng</string>
     <string name="banner_text_1">Tìm hiểu thú cưng của bạn!</string>
     <string name="banner_text_2">Xem ngay</string>
+    <string name="email_exist">Tài khoản với email này đã tồn tại.</string>
+    <string name="login">Đăng nhập</string>
+    <string name="email_changing">Bạn đang sắp đổi email đăng nhập</string>
+    <string name="email_changing_text">Thao tác này sẽ cần bạn xác thực lại mật khẩu</string>
 </resources>
